# my-tests

./: CMakeLists.txt  README.md
common/: TCL.h  matrix.h  run_test.sh  tools.h
docker/cache-test/: Dockerfile  packages.ubuntu4
flat-iterator/: CMakeLists.txt  flat-iterator.cxx
linux/: CMakeLists.txt  parse_proc_status.cxx
misc/: float_vs_double.cxx  matrix_pack_unpack.cxx  std_chrono.cxx  std_function.cxx
root-TObjBranch/: CMakeLists.txt  TObjBranch.h  main.cxx
root-TObjBranch/muDst/: StBTofHeader.h  StBTofRawHit.h  StBbcTriggerDetector.h  StCtbTriggerDetector.h  StDcaGeometry.h  StDetectorId.h  StDetectorState.h  StEmcTriggerDetector.h  StEventInfo.h  StEventSummary.h  StFmsTriggerDetector.h  StFpdCollection.h  StFpdTriggerDetector.h  StKinkBase.h  StKinkI.h  StKinkMc.h  StKinkMuDst.h  StL0Trigger.h  StL3AlgorithmInfo.h  StMtdTriggerDetector.h  StMuBTofHit.h  StMuBTofPidTraits.h  StMuEmcHit.h  StMuEmcTowerData.h  StMuEpdHit.h  StMuEvent.h  StMuFgtAdc.h  StMuFgtCluster.h  StMuFgtStrip.h  StMuFgtStripAssociation.h  StMuFmsCluster.h  StMuFmsHit.h  StMuFmsInfo.h  StMuFmsPoint.h  StMuHelix.h  StMuL3EventSummary.h  StMuMcTrack.h  StMuMcVertex.h  StMuMtdCollection.h  StMuMtdHeader.h  (+42 more)
root-branch-compress/: CMakeLists.txt  DemoDouble32.h  DemoDouble32_real_float.root  LinkDef.h  README.md  compress.cpp  compress.ipynb  index.html
root-schema-evolution/: CMakeLists.txt  MyClassA_8.h  MyClassA_8_LinkDef.h  MyClassA_9.h  MyClassA_9_LinkDef.h  MyClassB_3.h  MyClassB_3_LinkDef.h  README.md  read_A8_via_A9.cxx  read_A8_via_B3.cxx  write_A8.cxx
star-reco-out/: README.md  filelist_reco_test.txt  job_reco_test.xml  submit_jobs_reco_test.sh
sti-profiling/: README.md  index.html  plotly_csv.py  results_eigen_inverse.csv  results_errPropag6.csv  results_joinTwo.csv  results_joinTwo_NxN_5.csv  star_tracking_optimization.ipynb  sti_joinTwo_inputs.ipynb
test-StiTrackNode-errPropag6/: README.md  after.h  before.h  calc_zero_freq.C  calc_zero_freq.csv  eigen.h  main-errPropag6-vs-trasat-output.cxx  main.cxx  orig.h  orig_no_branch.h  smatrix.h  test-StiTrackNode-errPropag6.sh  trasat.h
test-StiTrackNodeHelper-joinTwo/: FuncArgsJoinTwo.h  LinkDef.h  eigen.h  eigen_5x5.h  eigen_NxN.h  eigen_as_orig.h  eigen_float.h  eigen_unpacked.h  main.cxx  orig.h
tiny-histogram/: th.cxx
